@@ -11,6 +11,12 @@ renameAction.Action.text=&Rename file
 renameAction.Action.shortDescription=Rename file
 renameAction.Action.accelerator=F2
 
+openLogFile.Action.text=&Open log file
+openLogFile.Action.shortDescription=Open log for viewing
+browseToLogFile.Action.text=&Browse to log file
+browseToLogFile.Action.shortDescription=Open folder of log file
+
+
 =======================================================================================================================
                                            Version 0.85u1->0.86
 =======================================================================================================================
